made the code to be able to use graalvm to compile the output executable to be native app