@@ -1,13 +1,30 @@
-
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.3'
-    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.springframework.boot' version '3.2.0-SNAPSHOT'
+    id 'io.spring.dependency-management' version '1.1.3'
+    id 'org.hibernate.orm' version '6.2.8.Final'
+    id 'org.graalvm.buildtools.native' version '0.9.27'
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+
+java {
+    sourceCompatibility = '21'
+}
+
+graalvmNative {
+
+    binaries {
+        main {
+            buildArgs.add('--enable-preview')
+        }
+    }
+}
+
+java {
+    toolchain { languageVersion = JavaLanguageVersion.of(21) }
+}
 
 configurations {
     compileOnly {
@@ -15,10 +32,10 @@ configurations {
     }
 }
 
-
 repositories {
     mavenCentral()
-    gradlePluginPortal()
+    maven { url 'https://repo.spring.io/milestone' }
+    maven { url 'https://repo.spring.io/snapshot' }
 }
 
 dependencies {
@@ -55,3 +72,10 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+hibernate {
+    enhancement {
+        enableAssociationManagement = true
+    }
+}
+
